--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										<h2><a href="https://github.com/AYoungBusiness/BikeDataSpreadsheetAnalysis">Bike Data<br />
 										Spreadsheet Project</a></h2>
 									</header>																					
-									<a href="https://github.com/AYoungBusiness/BikeDataSpreadsheetAnalysis" class="image fit"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcottagelife.com%2Fgeneral%2Fhow-to-choose-the-right-bike%2F&psig=AOvVaw3zjQ76nkHsWBTGZtBkGM0Z&ust=1762824174916000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCMDVgYa25pADFQAAAAAdAAAAABAE" alt="" /></a>
+									<a href="https://github.com/AYoungBusiness/BikeDataSpreadsheetAnalysis" class="image fit"><img src="Bike.jpg" alt="" /></a>
 									<p>We used advanced Excel Techniques to clean and analyze the Spreadsheet data set. We then used Pivot tables and conditional formatting to create a Dashboard from the data. This dashboard shows
 										 the relationship between demographics such as age, commute distance, and marital status and whether or not they purchased a bike. </p>
 									<ul class="actions special">
@@ -188,3 +188,4 @@
 	</body>
 
 </html>
+
