Revise portfolio title and intro section
Updated portfolio title and introductory text to reflect current role and achievements.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Andrew Y. Portfolio</title>
+		<title>Andrew Young | Analytics Engineer & Operations Intelligence</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Andrew Young's<br />
 						Data Analyst Portfolio</h1>
-						<p>This is a website portfolio created to showcase my experience as a Data Analyst. Here is a link to my Github: <a href="https://github.com/AYoungBusiness">Code</a>. I hope it shows I have the skills necessary to become a Data Analyst at your company.</p>
+						<p>I specialize in building automated data systems that convert messy operational data into high-value business decisions. Architect of data solutions that delivered $3M in cost reductions at ALSTOM. Here is a link to my Github: <a href="https://github.com/AYoungBusiness">Code</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -38,7 +38,7 @@
 							<li class="active"><a href="index.html">These are my projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/andrew-young-a825b2182/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/andrew-young15/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/AYoungBusiness" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -188,5 +188,6 @@
 	</body>
 
 </html>
+
 
 
