--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Andrew Young's<br />
-						Data Analyst Portfolio</h1>
-						<p>I specialize in building automated data systems that convert messy operational data into high-value business decisions. Architect of data solutions that delivered $3M in cost reductions at ALSTOM. Here is a link to my Github: <a href="https://github.com/AYoungBusiness">Code</a>.</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+						<h1>Andrew Young</h1>
+				<p>Operations Analyst & Analytics Engineer specializing in <strong>Operational Intelligence</strong>. I architect data solutions that delivered <strong>$3M in cost reductions</strong> and automated workflows saving <strong>200+ hours</strong> at ALSTOM. Here is a link to my Github: <a href="https://github.com/AYoungBusiness">Code</a>.</p>
+				<ul class="actions">
+					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				</ul>
+			</div>
 
 				<!-- Header -->
 					<header id="header">
@@ -31,7 +30,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">These are my projects</a></li>
+							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/andrew-young15/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -46,8 +45,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date" id="current-date"></span>
-									<h2><a href="https://www.linkedin.com/in/andrew-young15/">Little bit <br />
-									about me</a></h2>
+									<h2><a href="https://www.linkedin.com/in/andrew-young15/">About Me </a></h2>
 									<p>I am an Operations Analyst with a background in Industrial and Systems Engineering from Binghamton University. Currently at Alstom, I serve as a Data SME, bridging the gap between complex MES datasets and executive-level decision making. I specialize in Power BI, SQL, and automation to drive measurable business impact and operational efficiency.
 									</p>
 								</header>
@@ -194,6 +192,7 @@
 	</body>
 
 </html>
+
 
 
 
