--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<li><a href="https://github.com/AYoungBusiness/telecom_churn-Cleaning/blob/main/Cleaning.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
-								article>
+								<article>
     <header>
         <span class="date"></span>
         <h2><a href="https://github.com/AYoungBusiness/BikeDataSpreadsheetAnalysis">Customer Intelligence <br />
@@ -192,6 +192,7 @@
 	</body>
 
 </html>
+
 
 
 
