--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Andrew YToung</h1>
+						<h1>Andrew Young</h1>
 				<p>Operations Analyst & Analytics Engineer specializing in <strong>Operational Intelligence</strong>. I architect data solutions that delivered <strong>$3M in cost reductions</strong> and automated workflows saving <strong>200+ hours</strong> at ALSTOM. Here is a link to my Github: <a href="https://github.com/AYoungBusiness">Code</a>.</p>
 				<ul class="actions">
 					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -189,6 +189,7 @@
 	</body>
 
 </html>
+
 
 
 
