--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Andrew Young</h1>
-				<p>Operations Analyst & Analytics Engineer specializing in <strong>Operational Intelligence</strong>. I architect data solutions that delivered <strong>$3M in cost reductions</strong> and automated workflows saving <strong>200+ hours</strong> at ALSTOM. Here is a link to my Github: <a href="https://github.com/AYoungBusiness">Code</a>.</p>
+				<p>Hi, I'm Andrew Young. I'm an Operations Analyst & Power BI SME specializing in transforming complex industrial data into actionable business intelligence. From $3M in cost savings at Alstom to automated Python browser scripts, I bridge the gap between technical data and executive decisions. Here is a link to my Github: <a href="https://github.com/AYoungBusiness">Code</a>.</p>
 				<ul class="actions">
 					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 				</ul>
@@ -189,6 +189,7 @@
 	</body>
 
 </html>
+
 
 
 
